# ----------------------------------
# --- AGLib (BT Patch) - Formats ---
# ----------------------------------

add_subdirectory(AG)
# add_subdirectory(ATLAS)
# add_subdirectory(BAS)
# add_subdirectory(BU)
# add_subdirectory(CAG)
# add_subdirectory(LCF)
# add_subdirectory(SwitchBoard)
# add_subdirectory(TF)
# add_subdirectory(TIMIT)
# add_subdirectory(TransAG)
# add_subdirectory(TreeBank)
# add_subdirectory(TRS)
# add_subdirectory(XLabel)

